name, the spyee. When a conference is entered in spy mode, the spyer receives
voice only from the spyee.  If unmuted, the spyer can whisper to the spyee,
that is, spyer voice is mixed with conference voice and sent to the spyee.
Note that this initial implementation limits one spyer per spyee and a spyer
can not be a spyee.

Added a new field, spy, to the conference list command output. The spy
field is the id of the spyee if the member is a spyer; otherwise, the asterisk
character is used to indicate the member is not a spyer.

Changed the application argument delimiter from the forward slash, "/", to the
comma character, ",", to simplify parsing of channel name parameters and to be
consistent with other asterisk applications.

Added "H" option which enables "music on hold" if there is only one member in
the conference.

Added an optional parameter, nohangup, to the conference end command so that
dial plan isn't terminated when the conference ends.

Added a directory to examples for munin plugins to graph conference and member
counts. 

Documented KonferenceCount application in Dialplan.txt.

Fix the play sound command so that it plays the input sound in the language
specified via the channel function or the default language if the langauge is
not set.

Fix to check the file descriptor is not the generator descriptor when the
member thread reads its channel. This is required since music on hold was added
because two threads now read the same channel when that channel is put on hold.

Fix some memory leaks found after reviewing the code: free the channel_table
when the module is unloaded; free zeta when the speex dsp is destroyed; destroy
member mutex and condition variable when the member is deleted; free last
cached frame and out packer control block when the member is deleted; destroy
conference mutex when the conference is deleted; and, finally, in process
outgoing frames, free the conference frame before checking for a soft hangup.